Fix right side spacing of `themeToggle`

--- a/main.css
+++ b/main.css
@@ -382,6 +382,7 @@ footer {
   position: relative;
   display: inline-grid;
   grid-template-columns: repeat(3, 1fr);
+  margin-right: -1rem;
 }
 
 .themeToggle button {
